--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "changeloger",
+  "version": "0.0.3",
   "description": "free changelog",
   "author": "alqmc",
   "scripts": {
     "build": "gulp --require sucrase/register/ts --gulpfile build/gulpfile.ts",
     "clear": "rimraf dist",
-    "link": "cd dist && npm link",
+    "link": "cd dist && pnpm link --global",
     "push": "git push gitee master && git push github master",
     "update:version": "sucrase-node build/utils/version.ts",
     "lint": "eslint -c ./.eslintrc.js --fix --ext .jsx,.js,.ts,.tsx \"src/**/*.{jsx,js,ts,tsx}\" ",
@@ -14,15 +15,15 @@
   "license": "MIT",
   "devDependencies": {
     "@alqmc/build-ts": "^0.0.8",
-    "@alqmc/build-utils": "^0.0.3",
-    "@alqmc/eslint-config": "^0.0.4",
-    "@commitlint/cli": "^9.1.2",
+    "@alqmc/build-utils": "0.0.5",
+    "@alqmc/eslint-config": "0.0.4",
+    "@commitlint/cli": "^8.3.5",
     "@commitlint/config-angular": "^8.3.4",
-    "@commitlint/config-conventional": "^9.1.2",
+    "@commitlint/config-conventional": "^16.2.1",
     "@types/eslint": "^8.4.3",
     "@types/gulp": "^4.0.9",
     "@types/minimist": "^1.2.2",
-    "@types/node": "^17.0.21",
+    "@types/node": "^17.0.45",
     "@types/prompts": "^2.0.14",
     "commitizen": "^4.1.2",
     "gulp": "^4.0.2",
@@ -33,12 +34,12 @@
     "rollup": "^2.70.1",
     "rollup-plugin-typescript2": "^0.31.2",
     "sucrase": "^3.20.3",
-    "tslib": "^2.3.1",
+    "tslib": "^2.4.0",
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "execa": "5.0.1",
     "kolorist": "^1.5.1",
-    "minimist": "^1.2.6",
-    "prompts": "^2.4.2"
+    "minimist": "^1.2.6"
   }
 }
