--- a/package/package.json
+++ b/package/package.json
@@ -1,6 +1,6 @@
 {
   "name": "changeloger",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "private": false,
   "description": "free changelog",
   "license": "MIT",
@@ -8,14 +8,15 @@
   "files": [
     "index.js",
     "template",
+    "assets",
     "README.md"
   ],
   "bin": {
-    "template-cli": "index.js"
+    "changeloger": "index.js"
   },
   "dependencies": {
+    "execa": "5.0.1",
     "kolorist": "^1.5.1",
-    "minimist": "^1.2.6",
-    "prompts": "^2.4.2"
+    "minimist": "^1.2.6"
   }
 }
