--- a/package/package.json
+++ b/package/package.json
@@ -1,10 +1,10 @@
 {
   "name": "changeloger",
-  "version": "0.1.0",
+  "version": "0.1.3",
   "private": false,
   "description": "free changelog",
   "license": "MIT",
-  "author": "alqmc",
+  "author": "kinfuy (https://github.com/kinfuy)",
   "files": [
     "index.js",
     "template",
@@ -14,6 +14,7 @@
   "bin": {
     "changeloger": "index.js"
   },
+  "repository": "https://github.com/kinfuy/changeloger",
   "dependencies": {
     "execa": "5.0.1",
     "kolorist": "^1.5.1",
